| Summary: | ASTERISK-28362: strtok_r() makes gcc compile warning | ||
| Reporter: | sungtae kim (pchero) | Labels: | |
| Date Opened: | 2019-03-28 19:12:12 | Date Closed: | 2019-04-04 08:01:25 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_sip/General |
| Versions: | 16.2.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | strtok_r() function call makes gcc complie warnings and makes error eventually.
See detail this link. https://gcc.gnu.org/bugzilla//show_bug.cgi?id=71701 chan_sip.c makes gcc compile warning. {noformat} $ make CC="cc" CXX="g++" LD="" AR="" RANLIB="" CFLAGS="" LDFLAGS="" make -C menuselect CONFIGURE_SILENT="--silent" makeopts make[1]: Entering directory '/home/pchero/git/asterisk/menuselect' make[1]: 'makeopts' is up to date. make[1]: Leaving directory '/home/pchero/git/asterisk/menuselect' Generating input for menuselect ... menuselect/menuselect --check-deps menuselect.makeopts menuselect/menuselect --check-deps menuselect.makeopts [CC] chan_sip.c -> chan_sip.o chan_sip.c: In function ‘process_sdp_a_text’: chan_sip.c:11648:4: error: ‘red_cp’ may be used uninitialized in this function [-Werror=maybe-uninitialized] sscanf(red_cp, "%30u", (unsigned *)&red_data_pt[*red_num_gen]); ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ chan_sip.c: At top level: cc1: error: unrecognized command line option ‘-Wno-format-truncation’ [-Werror] cc1: all warnings being treated as errors /home/pchero/git/asterisk/Makefile.rules:158: recipe for target 'chan_sip.o' failed make[1]: *** [chan_sip.o] Error 1 Makefile:383: recipe for target 'channels' failed make: *** [channels] Error 2 $ gcc -v Using built-in specs. COLLECT_GCC=gcc COLLECT_LTO_WRAPPER=/usr/lib/gcc/x86_64-linux-gnu/6/lto-wrapper Target: x86_64-linux-gnu Configured with: ../src/configure -v --with-pkgversion='Debian 6.3.0-18+deb9u1' --with-bugurl=file:///usr/share/doc/gcc-6/README.Bugs --enable-languages=c,ada,c++,java,go,d,fortran,objc,obj-c++ --prefix=/usr --program-suffix=-6 --program-prefix=x86_64-linux-gnu- --enable-shared --enable-linker-build-id --libexecdir=/usr/lib --without-included-gettext --enable-threads=posix --libdir=/usr/lib --enable-nls --with-sysroot=/ --enable-clocale=gnu --enable-libstdcxx-debug --enable-libstdcxx-time=yes --with-default-libstdcxx-abi=new --enable-gnu-unique-object --disable-vtable-verify --enable-libmpx --enable-plugin --enable-default-pie --with-system-zlib --disable-browser-plugin --enable-java-awt=gtk --enable-gtk-cairo --with-java-home=/usr/lib/jvm/java-1.5.0-gcj-6-amd64/jre --enable-java-home --with-jvm-root-dir=/usr/lib/jvm/java-1.5.0-gcj-6-amd64 --with-jvm-jar-dir=/usr/lib/jvm-exports/java-1.5.0-gcj-6-amd64 --with-arch-directory=amd64 --with-ecj-jar=/usr/share/java/eclipse-ecj.jar --with-target-system-zlib --enable-objc-gc=auto --enable-multiarch --with-arch-32=i686 --with-abi=m64 --with-multilib-list=m32,m64,mx32 --enable-multilib --with-tune=generic --enable-checking=release --build=x86_64-linux-gnu --host=x86_64-linux-gnu --target=x86_64-linux-gnu Thread model: posix gcc version 6.3.0 20170516 (Debian 6.3.0-18+deb9u1) $ uname -a Linux debian 4.9.0-8-amd64 #1 SMP Debian 4.9.130-2 (2018-10-27) x86_64 GNU/Linux {noformat} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2019-03-28 19:12:13.242-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: sungtae kim (pchero) 2019-03-28 19:45:33.191-0500 Not just only for this, I can see other module comes with this error as well. {noformat} $ make --trace Makefile:1083: update target 'menuselect/makeopts' due to: makeopts .lastclean CC="cc" CXX="g++" LD="" AR="" RANLIB="" CFLAGS="" LDFLAGS="" make -C menuselect CONFIGURE_SILENT="--silent" makeopts make[1]: Entering directory '/home/pchero/git/asterisk/menuselect' make[1]: 'makeopts' is up to date. make[1]: Leaving directory '/home/pchero/git/asterisk/menuselect' Makefile:394: update target 'main/version.c' due to: FORCE build_tools/make_version_c > main/version.c.tmp cmp -s main/version.c.tmp main/version.c || mv main/version.c.tmp main/version.c rm -f main/version.c.tmp Makefile:399: update target 'include/asterisk/buildopts.h' due to: menuselect.makeopts .lastclean build_tools/make_buildopts_h > include/asterisk/buildopts.h.tmp cmp -s include/asterisk/buildopts.h.tmp include/asterisk/buildopts.h || mv include/asterisk/buildopts.h.tmp include/asterisk/buildopts.h rm -f include/asterisk/buildopts.h.tmp Makefile:389: update target 'defaults.h' due to: makeopts build_tools/make_defaults_h > defaults.h.tmp cmp -s defaults.h.tmp defaults.h || mv defaults.h.tmp defaults.h rm -f defaults.h.tmp Makefile:386: update target 'utils' due to: makeopts .lastclean main/version.c include/asterisk/build.h include/asterisk/buildopts.h defaults.h _ASTCFLAGS=""-I/home/pchero/git/asterisk/include" -I/usr/include/libxml2 -pipe -Wall -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -g3 -Werror -Wunused -Wdeclaration-after-statement -Wtrampolines -Wundef -Wmissing-format-attribute -Wformat=2 " ASTCFLAGS="" _ASTLDFLAGS=" " ASTLDFLAGS="" make --quiet --no-print-directory --no-builtin-rules -C utils SUBDIR=utils all Makefile:386: update target 'agi' due to: makeopts .lastclean main/version.c include/asterisk/build.h include/asterisk/buildopts.h defaults.h _ASTCFLAGS=""-I/home/pchero/git/asterisk/include" -I/usr/include/libxml2 -pipe -Wall -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -g3 -Werror -Wunused -Wdeclaration-after-statement -Wtrampolines -Wundef -Wmissing-format-attribute -Wformat=2 " ASTCFLAGS="" _ASTLDFLAGS=" " ASTLDFLAGS="" make --quiet --no-print-directory --no-builtin-rules -C agi SUBDIR=agi all Makefile:386: update target 'contrib' due to: makeopts .lastclean main/version.c include/asterisk/build.h include/asterisk/buildopts.h defaults.h _ASTCFLAGS=""-I/home/pchero/git/asterisk/include" -I/usr/include/libxml2 -pipe -Wall -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -g3 -Werror -Wunused -Wdeclaration-after-statement -Wtrampolines -Wundef -Wmissing-format-attribute -Wformat=2 " ASTCFLAGS="" _ASTLDFLAGS=" " ASTLDFLAGS="" make --quiet --no-print-directory --no-builtin-rules -C contrib SUBDIR=contrib all Makefile:383: update target 'third-party' due to: makeopts .lastclean main/version.c include/asterisk/build.h include/asterisk/buildopts.h defaults.h _ASTCFLAGS=""-I/home/pchero/git/asterisk/include" -I/usr/include/libxml2 -pipe -Wall -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -g3 -Werror -Wunused -Wdeclaration-after-statement -Wtrampolines -Wundef -Wmissing-format-attribute -Wformat=2 " ASTCFLAGS="" _ASTLDFLAGS=" " ASTLDFLAGS="" make --quiet --no-print-directory --no-builtin-rules -C third-party SUBDIR=third-party all Makefile:20: target 'pjproject' does not exist make --quiet --no-print-directory -C pjproject all Makefile:20: target 'jansson' does not exist make --quiet --no-print-directory -C jansson all Makefile:383: update target 'channels' due to: makeopts .lastclean main/version.c include/asterisk/build.h include/asterisk/buildopts.h defaults.h _ASTCFLAGS=""-I/home/pchero/git/asterisk/include" -I/usr/include/libxml2 -pipe -Wall -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -g3 -Werror -Wunused -Wdeclaration-after-statement -Wtrampolines -Wundef -Wmissing-format-attribute -Wformat=2 " ASTCFLAGS="" _ASTLDFLAGS=" " ASTLDFLAGS="" make --quiet --no-print-directory --no-builtin-rules -C channels SUBDIR=channels all Makefile:383: update target 'pbx' due to: makeopts .lastclean main/version.c include/asterisk/build.h include/asterisk/buildopts.h defaults.h _ASTCFLAGS=""-I/home/pchero/git/asterisk/include" -I/usr/include/libxml2 -pipe -Wall -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -g3 -Werror -Wunused -Wdeclaration-after-statement -Wtrampolines -Wundef -Wmissing-format-attribute -Wformat=2 " ASTCFLAGS="" _ASTLDFLAGS=" " ASTLDFLAGS="" make --quiet --no-print-directory --no-builtin-rules -C pbx SUBDIR=pbx all /home/pchero/git/asterisk/Makefile.rules:158: update target 'pbx_dundi.o' due to: pbx_dundi.c /usr/include/stdc-predef.h /home/pchero/git/asterisk/include/asterisk.h /home/pchero/git/asterisk/include/asterisk/autoconfig.h /home/pchero/git/asterisk/include/asterisk/buildopts.h /home/pchero/git/asterisk/include/asterisk/compat.h /home/pchero/git/asterisk/include/asterisk/compiler.h /usr/include/inttypes.h /usr/include/features.h /usr/include/x86_64-linux-gnu/sys/cdefs.h /usr/include/x86_64-linux-gnu/bits/wordsize.h /usr/include/x86_64-linux-gnu/gnu/stubs.h /usr/include/x86_64-linux-gnu/gnu/stubs-64.h /usr/lib/gcc/x86_64-linux-gnu/6/include/stdint.h /usr/include/stdint.h /usr/include/x86_64-linux-gnu/bits/wchar.h /usr/lib/gcc/x86_64-linux-gnu/6/include-fixed/limits.h /usr/lib/gcc/x86_64-linux-gnu/6/include-fixed/syslimits.h /usr/include/limits.h /usr/include/x86_64-linux-gnu/bits/posix1_lim.h /usr/include/x86_64-linux-gnu/bits/local_lim.h /usr/include/linux/limits.h /usr/include/x86_64-linux-gnu/bits/posix2_lim.h /usr/include/x86_64-linux-gnu/bits/xopen_lim.h /usr/include/x86_64-linux-gnu/bits/stdio_lim.h /usr/include/unistd.h /usr/include/x86_64-linux-gnu/bits/posix_opt.h /usr/include/x86_64-linux-gnu/bits/environments.h /usr/include/x86_64-linux-gnu/bits/types.h /usr/include/x86_64-linux-gnu/bits/typesizes.h /usr/lib/gcc/x86_64-linux-gnu/6/include/stddef.h /usr/include/x86_64-linux-gnu/bits/confname.h /usr/include/getopt.h /usr/include/x86_64-linux-gnu/sys/types.h /usr/include/time.h /usr/include/endian.h /usr/include/x86_64-linux-gnu/bits/endian.h /usr/include/x86_64-linux-gnu/bits/byteswap.h /usr/include/x86_64-linux-gnu/bits/byteswap-16.h /usr/include/x86_64-linux-gnu/sys/select.h /usr/include/x86_64-linux-gnu/bits/select.h /usr/include/x86_64-linux-gnu/bits/sigset.h /usr/include/x86_64-linux-gnu/bits/time.h /usr/include/x86_64-linux-gnu/sys/sysmacros.h /usr/include/x86_64-linux-gnu/bits/pthreadtypes.h /usr/lib/gcc/x86_64-linux-gnu/6/include/stdarg.h /usr/include/stdlib.h /usr/include/x86_64-linux-gnu/bits/waitflags.h /usr/include/x86_64-linux-gnu/bits/waitstatus.h /usr/include/xlocale.h /usr/include/alloca.h /usr/include/x86_64-linux-gnu/bits/stdlib-bsearch.h /usr/include/x86_64-linux-gnu/bits/stdlib-float.h /usr/include/stdio.h /usr/include/libio.h /usr/include/_G_config.h /usr/include/wchar.h /usr/include/x86_64-linux-gnu/bits/sys_errlist.h /usr/include/x86_64-linux-gnu/bits/stdio.h /usr/include/string.h /usr/include/x86_64-linux-gnu/bits/string.h /usr/include/x86_64-linux-gnu/bits/string2.h /usr/include/poll.h /usr/include/x86_64-linux-gnu/sys/poll.h /usr/include/x86_64-linux-gnu/bits/poll.h /usr/include/errno.h /usr/include/x86_64-linux-gnu/bits/errno.h /usr/include/linux/errno.h /usr/include/x86_64-linux-gnu/asm/errno.h /usr/include/asm-generic/errno.h /usr/include/asm-generic/errno-base.h /usr/include/glob.h /home/pchero/git/asterisk/include/asterisk/astmm.h /home/pchero/git/asterisk/include/asterisk/network.h /usr/include/netinet/in.h /usr/include/x86_64-linux-gnu/sys/socket.h /usr/include/x86_64-linux-gnu/sys/uio.h /usr/include/x86_64-linux-gnu/bits/uio.h /usr/include/x86_64-linux-gnu/bits/socket.h /usr/include/x86_64-linux-gnu/bits/socket_type.h /usr/include/x86_64-linux-gnu/bits/sockaddr.h /usr/include/x86_64-linux-gnu/asm/socket.h /usr/include/asm-generic/socket.h /usr/include/x86_64-linux-gnu/asm/sockios.h /usr/include/asm-generic/sockios.h /usr/include/x86_64-linux-gnu/bits/in.h /usr/include/arpa/inet.h /usr/include/netinet/in_systm.h /usr/include/netinet/ip.h /usr/include/netinet/tcp.h /usr/include/netdb.h /usr/include/rpc/netdb.h /usr/include/x86_64-linux-gnu/bits/siginfo.h /usr/include/x86_64-linux-gnu/bits/netdb.h /usr/include/net/if.h /usr/include/x86_64-linux-gnu/sys/ioctl.h /usr/include/x86_64-linux-gnu/bits/ioctls.h /usr/include/x86_64-linux-gnu/asm/ioctls.h /usr/include/asm-generic/ioctls.h /usr/include/linux/ioctl.h /usr/include/x86_64-linux-gnu/asm/ioctl.h /usr/include/asm-generic/ioctl.h /usr/include/x86_64-linux-gnu/bits/ioctl-types.h /usr/include/x86_64-linux-gnu/sys/ttydefaults.h /usr/include/zlib.h /usr/include/zconf.h /usr/include/signal.h /usr/include/x86_64-linux-gnu/bits/signum.h /usr/include/x86_64-linux-gnu/bits/sigaction.h /usr/include/x86_64-linux-gnu/bits/sigcontext.h /usr/include/x86_64-linux-gnu/bits/sigstack.h /usr/include/x86_64-linux-gnu/sys/ucontext.h /usr/include/x86_64-linux-gnu/bits/sigthread.h /usr/include/pthread.h /usr/include/sched.h /usr/include/x86_64-linux-gnu/bits/sched.h /usr/include/x86_64-linux-gnu/bits/timex.h /usr/include/x86_64-linux-gnu/bits/setjmp.h /home/pchero/git/asterisk/include/asterisk/file.h /usr/include/fcntl.h /usr/include/x86_64-linux-gnu/bits/fcntl.h /usr/include/x86_64-linux-gnu/bits/fcntl-linux.h /usr/include/x86_64-linux-gnu/bits/stat.h /usr/include/x86_64-linux-gnu/sys/mman.h /usr/include/x86_64-linux-gnu/bits/mman.h /usr/include/x86_64-linux-gnu/bits/mman-linux.h /home/pchero/git/asterisk/include/asterisk/logger.h /home/pchero/git/asterisk/include/asterisk/options.h /home/pchero/git/asterisk/include/asterisk/channel.h /home/pchero/git/asterisk/include/asterisk/alertpipe.h /home/pchero/git/asterisk/include/asterisk/utils.h /home/pchero/git/asterisk/include/asterisk/lock.h /usr/include/x86_64-linux-gnu/sys/param.h /usr/include/x86_64-linux-gnu/bits/param.h /usr/include/linux/param.h /usr/include/x86_64-linux-gnu/asm/param.h /usr/include/asm-generic/param.h /usr/include/execinfo.h /home/pchero/git/asterisk/include/asterisk/backtrace.h /home/pchero/git/asterisk/include/asterisk/inline_api.h /home/pchero/git/asterisk/include/asterisk/time.h /usr/include/x86_64-linux-gnu/sys/time.h /home/pchero/git/asterisk/include/asterisk/localtime.h /usr/include/locale.h /usr/include/x86_64-linux-gnu/bits/locale.h /home/pchero/git/asterisk/include/asterisk/stringfields.h /home/pchero/git/asterisk/include/asterisk/vector.h /home/pchero/git/asterisk/include/asterisk/strings.h /usr/include/ctype.h /home/pchero/git/asterisk/include/asterisk/threadstorage.h /home/pchero/git/asterisk/include/asterisk/astobj2.h /home/pchero/git/asterisk/include/asterisk/linkedlists.h /home/pchero/git/asterisk/include/asterisk/abstract_jb.h /home/pchero/git/asterisk/include/asterisk/format.h /home/pchero/git/asterisk/include/asterisk/codec.h /home/pchero/git/asterisk/include/asterisk/poll-compat.h /home/pchero/git/asterisk/include/asterisk/select.h /home/pchero/git/asterisk/include/asterisk/frame.h /home/pchero/git/asterisk/include/asterisk/endian.h /home/pchero/git/asterisk/include/asterisk/chanvars.h /home/pchero/git/asterisk/include/asterisk/config.h /home/pchero/git/asterisk/include/asterisk/cdr.h /home/pchero/git/asterisk/include/asterisk/datastore.h /home/pchero/git/asterisk/include/asterisk/format_cap.h /home/pchero/git/asterisk/include/asterisk/channelstate.h /home/pchero/git/asterisk/include/asterisk/ccss.h /home/pchero/git/asterisk/include/asterisk/devicestate.h /home/pchero/git/asterisk/include/asterisk/framehook.h /home/pchero/git/asterisk/include/asterisk/stasis.h /home/pchero/git/asterisk/include/asterisk/json.h /home/pchero/git/asterisk/include/asterisk/netsock2.h /home/pchero/git/asterisk/include/asterisk/manager.h /home/pchero/git/asterisk/include/asterisk/xmldoc.h /home/pchero/git/asterisk/include/asterisk/xml.h /home/pchero/git/asterisk/include/asterisk/event.h /home/pchero/git/asterisk/include/asterisk/event_defs.h /home/pchero/git/asterisk/include/asterisk/endpoints.h /home/pchero/git/asterisk/include/asterisk/pbx.h /home/pchero/git/asterisk/include/asterisk/sched.h /home/pchero/git/asterisk/include/asterisk/presencestate.h /home/pchero/git/asterisk/include/asterisk/hashtab.h /home/pchero/git/asterisk/include/asterisk/module.h /home/pchero/git/asterisk/include/asterisk/cli.h /home/pchero/git/asterisk/include/asterisk/md5.h /home/pchero/git/asterisk/include/asterisk/dundi.h /home/pchero/git/asterisk/include/asterisk/io.h /home/pchero/git/asterisk/include/asterisk/crypto.h /home/pchero/git/asterisk/include/asterisk/optional_api.h /usr/include/openssl/aes.h /usr/include/x86_64-linux-gnu/openssl/opensslconf.h /home/pchero/git/asterisk/include/asterisk/astdb.h /home/pchero/git/asterisk/include/asterisk/acl.h /home/pchero/git/asterisk/include/asterisk/app.h dundi-parser.h echo " [CC] pbx_dundi.c -> pbx_dundi.o" [CC] pbx_dundi.c -> pbx_dundi.o gcc -o pbx_dundi.o -c pbx_dundi.c -MD -MT pbx_dundi.o -MF .pbx_dundi.o.d -MP -pthread -I/home/pchero/git/asterisk/include -I/usr/include/libxml2 -pipe -Wall -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -g3 -Werror -Wunused -Wdeclaration-after-statement -Wtrampolines -Wundef -Wmissing-format-attribute -Wformat=2 -O3 -march=native -fPIC -DAST_MODULE=\"pbx_dundi\" -DAST_MODULE_SELF_SYM=__internal_pbx_dundi_self pbx_dundi.c: In function ‘dundi_show_hints’: pbx_dundi.c:3097:3: error: ‘__s’ may be used uninitialized in this function [-Werror=maybe-uninitialized] dundi_str_short_to_eid(&src_eid, src); ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors /home/pchero/git/asterisk/Makefile.rules:158: recipe for target 'pbx_dundi.o' failed make[1]: *** [pbx_dundi.o] Error 1 Makefile:383: recipe for target 'pbx' failed make: *** [pbx] Error 2 {noformat} By: sungtae kim (pchero) 2019-03-28 19:47:50.931-0500 Dev note. Found. This is gcc's bug. https://gcc.gnu.org/bugzilla//show_bug.cgi?id=71701 By: sungtae kim (pchero) 2019-03-28 20:06:21.157-0500 Looks like every `strtok_r()` function call have a potential problem of this. How could fix this? By: sungtae kim (pchero) 2019-03-28 20:08:17.616-0500 Updated ticket. By: Joshua C. Colp (jcolp) 2019-04-02 05:30:41.392-0500 What version of GCC is in use? By: sungtae kim (pchero) 2019-04-02 06:12:42.677-0500 gcc version 6.3.0 20170516 (Debian 6.3.0-18+deb9u1) {noformat} $ gcc -v Using built-in specs. COLLECT_GCC=gcc COLLECT_LTO_WRAPPER=/usr/lib/gcc/x86_64-linux-gnu/6/lto-wrapper Target: x86_64-linux-gnu Configured with: ../src/configure -v --with-pkgversion='Debian 6.3.0-18+deb9u1' --with-bugurl=file:///usr/share/doc/gcc-6/README.Bugs --enable-languages=c,ada,c++,java,go,d,fortran,objc,obj-c++ --prefix=/usr --program-suffix=-6 --program-prefix=x86_64-linux-gnu- --enable-shared --enable-linker-build-id --libexecdir=/usr/lib --without-included-gettext --enable-threads=posix --libdir=/usr/lib --enable-nls --with-sysroot=/ --enable-clocale=gnu --enable-libstdcxx-debug --enable-libstdcxx-time=yes --with-default-libstdcxx-abi=new --enable-gnu-unique-object --disable-vtable-verify --enable-libmpx --enable-plugin --enable-default-pie --with-system-zlib --disable-browser-plugin --enable-java-awt=gtk --enable-gtk-cairo --with-java-home=/usr/lib/jvm/java-1.5.0-gcj-6-amd64/jre --enable-java-home --with-jvm-root-dir=/usr/lib/jvm/java-1.5.0-gcj-6-amd64 --with-jvm-jar-dir=/usr/lib/jvm-exports/java-1.5.0-gcj-6-amd64 --with-arch-directory=amd64 --with-ecj-jar=/usr/share/java/eclipse-ecj.jar --with-target-system-zlib --enable-objc-gc=auto --enable-multiarch --with-arch-32=i686 --with-abi=m64 --with-multilib-list=m32,m64,mx32 --enable-multilib --with-tune=generic --enable-checking=release --build=x86_64-linux-gnu --host=x86_64-linux-gnu --target=x86_64-linux-gnu Thread model: posix gcc version 6.3.0 20170516 (Debian 6.3.0-18+deb9u1) {noformat} By: Friendly Automation (friendly-automation) 2019-04-04 08:01:27.152-0500 Change 11219 merged by Friendly Automation: build: Fix compiler warnings/errors. [https://gerrit.asterisk.org/c/asterisk/+/11219|https://gerrit.asterisk.org/c/asterisk/+/11219] By: Friendly Automation (friendly-automation) 2019-04-04 08:01:48.155-0500 Change 11221 merged by Friendly Automation: build: Fix compiler warnings/errors. [https://gerrit.asterisk.org/c/asterisk/+/11221|https://gerrit.asterisk.org/c/asterisk/+/11221] By: Friendly Automation (friendly-automation) 2019-04-04 08:06:09.400-0500 Change 11222 merged by Friendly Automation: build: Fix compiler warnings/errors. [https://gerrit.asterisk.org/c/asterisk/+/11222|https://gerrit.asterisk.org/c/asterisk/+/11222] By: Friendly Automation (friendly-automation) 2019-04-04 08:11:48.877-0500 Change 11223 merged by Joshua Colp: build: Fix compiler warnings/errors. [https://gerrit.asterisk.org/c/asterisk/+/11223|https://gerrit.asterisk.org/c/asterisk/+/11223] By: Friendly Automation (friendly-automation) 2019-04-04 08:33:43.677-0500 Change 11220 merged by Joshua Colp: build: Fix compiler warnings/errors. [https://gerrit.asterisk.org/c/asterisk/+/11220|https://gerrit.asterisk.org/c/asterisk/+/11220] | ||